--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "redux": "4.0.5",
+    "redux-form": "^7.4.3",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.77.8",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
